Fix stretched ally logo on Partners page (#1409)
Height was set to 100% for some reason.

--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -23,7 +23,7 @@
 
         .ally-logo {
             display: block;
-            height: 100%;
+            height: auto;
             margin-top: 2rem;
             width: calc(15rem + 5%);
         }
